--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -153,3 +153,23 @@
    }
    
 }}
+
+.form2 .btn{
+    background-color: #dbd5d5b4;
+    padding: 10px 30px;
+
+}
+.form3 .badge{
+    font-size: 12px !important;
+    color: rgb(0, 0, 0) !important;
+    background-color: #dbd5d5b4 !important;
+    margin-bottom: 5px;
+
+}
+.form3 label,.form2 label,.form4 label{
+    font-size: 14px;
+    color: var(--secondaryColor);
+}
+.form4 input::placeholder{
+    font-size: 14px;
+}
