--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -1,128 +1,45 @@
-@-webkit-keyframes shadow-pop-tr {
-    0% {
-        -webkit-box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        -webkit-transform: translateX(0) translateY(0);
-        transform: translateX(0) translateY(0);
-    }
-
-    100% {
-        -webkit-box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        -webkit-transform: translateX(-8px) translateY(8px);
-        transform: translateX(-8px) translateY(8px);
-    }
-}
-
-@keyframes shadow-pop-tr {
-    0% {
-        -webkit-box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        -webkit-transform: translateX(0) translateY(0);
-        transform: translateX(0) translateY(0);
-    }
-
-    100% {
-        -webkit-box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        -webkit-transform: translateX(-8px) translateY(8px);
-        transform: translateX(-8px) translateY(8px);
-    }
-}
-
-.shadow-pop-tr {
-    -webkit-animation: shadow-pop-tr 1s ease-in infinite alternate;
-    animation: shadow-pop-tr 1s ease-in infinite alternate;
-}
-.splash img{
-    width: 689px;
+.splash .left img {
+    width: 600px;
     margin-bottom: 30px;
 }
-.splash
-.h4{
-    font-weight: 600;
-    font-size: 32px;
+
+.right img {
+    width: 600px;
+}
+
+.splash .right h2 {
+    font-weight: 800;
+    font-size: 30px;
+    color: var(--primaryColor);
     font-family: Arial, Helvetica, sans-serif;
 }
-.caption p{
-    font-size: 14px;
+
+.right p {
+    font-size: 16px;
     font-weight: 500;
-
-
 }
+
+.right p span {
+    font-weight: 700;
+    color: var(--primaryColor);
+}
+
 .splash .Btn {
-    background-color:var(--secondaryColor);
-    padding: 5px 100px;
+    background-color: var(--primaryColor);
+    padding: 10px 100px;
     display: block;
     border: none;
     border-radius: 5px;
-
-    
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
-.Btn a{
+
+.Btn a {
     color: #fff;
 }
-@-webkit-keyframes shadow-pop-tr {
-    0% {
-        -webkit-box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        -webkit-transform: translateX(0) translateY(0);
-        transform: translateX(0) translateY(0);
-    }
 
-    100% {
-        -webkit-box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        -webkit-transform: translateX(-8px) translateY(8px);
-        transform: translateX(-8px) translateY(8px);
-    }
-}
-
-@keyframes shadow-pop-tr {
-    0% {
-        -webkit-box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        box-shadow: 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579, 0 0 #384579;
-        -webkit-transform: translateX(0) translateY(0);
-        transform: translateX(0) translateY(0);
-    }
-
-    100% {
-        -webkit-box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        box-shadow: 1px -1px #384579, 2px -2px #384579, 3px -3px #384579, 4px -4px #384579, 5px -5px #384579, 6px -6px #384579, 7px -7px #384579, 8px -8px #384579;
-        -webkit-transform: translateX(-8px) translateY(8px);
-        transform: translateX(-8px) translateY(8px);
-    }
-}
-
-.shadow-pop-tr {
-    -webkit-animation: shadow-pop-tr 1s ease-in infinite alternate;
-    animation: shadow-pop-tr 1s ease-in infinite alternate;
-}
-.splash img{
-    width: 689px;
-    margin-bottom: 30px;
-}
-.splash
-.h4{
-    font-weight: 600;
-    font-size: 32px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.caption p{
-    font-size: 14px;
-    font-weight: 500;
-
-
-}
-.splash .Btn {
-    background-color:var(--secondaryColor);
-    padding: 5px 100px;
-    display: block;
-    border: none;
-    border-radius: 5px;
-
-    
-}
-.Btn a{
-    color: #fff;
+/* Button hover effect */
+.splash .Btn:hover {
+    background-color: var(--primaryColor);
+    transform: translateY(-3px);
 }
