--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@
     border-radius: 5px;
 
   }
+ 
   .link{
     text-decoration: none;
     color: #fff;
@@ -62,7 +63,9 @@
   .w-20{
     width: 20%;
   }
-
+  .w-15{
+    width: 15%;
+  }
 /* CSS Reset */
 
 * {
