--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -31,9 +31,45 @@
     top: 10px;
   
   }
+  .noPhoto{
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    background-color: #ccc;
+    position: relative;
+}
+  .photo img{
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+}
 
+  
+  .pen-icon {
+    font-size: 1.5rem;
+    color: var(--primaryColor);
+    margin-top: 5px;
+  }
+  
+  .photo {
+    width: 140px;
+    height: 140px;
+    position: relative;
+  }
+  
+  .photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .custom-btn {
+    display: inline-block;
+   color: var(--primaryColor);
+   border: 1px solid var(--primaryColor);
+   height: 38px
 
-
+ }
 .body .left{
     width: 50%;
     background-color: var(--primaryColor);
@@ -45,6 +81,11 @@
     font-family: var(--logoFont);
     font-weight: 800;
 
+}
+.signup .form1 .fa-arrow-left{
+    font-size: 25px;
+    cursor: pointer;
+    color: var(--primaryColor);
 }
 .logo i{
     font-size: 70px;
@@ -159,12 +200,18 @@
     padding: 10px 30px;
 
 }
-.form3 .badge{
-    font-size: 12px !important;
-    color: rgb(0, 0, 0) !important;
-    background-color: #dbd5d5b4 !important;
+.form1 .badge{
+    font-size: 14px !important;
+    color: #fff !important;
+    background-color: var(--primaryColor) !important;
     margin-bottom: 5px;
-
+    display: flex;
+    justify-content: center;
+    border-radius: 40px !important;
+    align-items: center;
+}
+.btn-close{
+    font-size: 10px;
 }
 .form3 label,.form2 label,.form4 label{
     font-size: 14px;
