--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,15 @@
     border-radius: 5px;
 
   }
+
+   .btnn{
+    color: var(--primaryColor);
+    background-color: transparent;
+     border: 1px solid var(--primaryColor);
+     border-radius: 5px;
+    padding: 10px 20px;
+
+   }
  
   .link{
     text-decoration: none;
@@ -50,6 +59,9 @@
   }
   .w-80{
     width: 80%;
+  }
+  .w-70{
+    width: 70%;
   }
   .w-60{
     width: 60%;
@@ -64,8 +76,22 @@
     width: 20%;
   }
   .w-15{
-    width: 15%;
+    width: 15% !important;
   }
+  .w-10{
+    width: 8%;
+  }
+  .h3{
+    color:var(--secondaryColor) !important;
+    font-weight: 600 !important;
+    font-size: 36px !important;
+}
+.p{
+  font-weight: 400;
+  font-size: 14px;
+  color: #434343;
+  line-height: 20px;
+}
 /* CSS Reset */
 
 * {
