--- a/src/components/Jops/Jops.css
+++ b/src/components/Jops/Jops.css
@@ -4,11 +4,11 @@
 }
 .search input::placeholder{
     color: #8E8B8B;
-    border:1px solid #F2F1F1;
 }
 .search i,.body h5,.light{
     color: #8E8B8B ;
 }
+
 .light{
     font-size: 1.1rem;
 }
@@ -53,7 +53,7 @@ font-weight: 500;
     top: 20px;
     right: 30px;
     font-size: 24px;
-  color: #8E8B8B;
+  color: var(--primaryColor);
 }
 .body .left{
     width: 30%;
