--- a/src/components/Application/Application.css
+++ b/src/components/Application/Application.css
@@ -3,6 +3,7 @@
     border-radius: 5px;
     padding:  5px;
     margin-bottom: 10px;
+    background-color: transparent;
 }
 .form .input label,.preview label{
     color: #6B6969;
