--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,9 @@
     font-weight: 600 !important;
     font-size: 36px !important;
 }
+.secondary{
+  color: var(--secondaryColor) !important;
+}
 .p{
   font-weight: 400;
   font-size: 14px;
@@ -114,3 +117,6 @@
   }
   
   
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
