--- a/src/components/Courses/CourseList/CourseList.css
+++ b/src/components/Courses/CourseList/CourseList.css
@@ -2,3 +2,12 @@
 .fa-star,.fa-star-half-stroke{
     font-size: 15px !important;
 }
+.btnn {
+ 
+  transition: all 0.3s ease !important;
+}
+
+.btnn:hover {
+  /* background-color: #0066cc !important; */
+  transform: scale(1.02) !important;
+}
