--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,9 +1,6 @@
 
   
-  .certification-image {
-    width: 50px;
-    height: 50px;
-  }
+ 
   .profile-header{
     width: 100%;
     height: 200px;
@@ -16,8 +13,8 @@
     border-top-right-radius: 6px;
   }  
   .profile-image {
-    width: 150px;
-    height: 150px;
+    width: 180px !important;
+    height: 180px !important;
     position: absolute;
     bottom: -70px;
     left: 40%;
